syntax = "proto3";

import "google/api/annotations.proto";
import "types.proto";

option go_package = "./proto";

service TeamService {
  rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse) {}
  rpc JoinTeam(JoinTeamRequest) returns (JoinTeamResponse) {}
  rpc UpdateTeam(UpdateTeamRequest) returns (UpdateTeamResponse) {
    option (google.api.http) = {
      post: "/v1/management/team/{team_id}"
      body: "updated_team"
    };
  }
}

message CreateTeamRequest {
  Team data = 1;
}

message CreateTeamResponse {
  bool success = 1;
  Team data = 2;
}

message JoinTeamRequest {
  string team_id = 1;
}

message JoinTeamResponse {
  bool success = 1;
}

message UpdateTeamRequest {
  string team_id = 1;
  Team updated_team = 2;
}

message UpdateTeamResponse {
  bool success = 1;
  Team data = 2;
}
